--- a/genindex.html
+++ b/genindex.html
@@ -157,11 +157,11 @@
  <a href="#A"><strong>A</strong></a>
  | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
- | <a href="#K"><strong>K</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#O"><strong>O</strong></a>
@@ -170,7 +170,6 @@
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
- | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  
 </div>
@@ -189,12 +188,10 @@
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Indicators.BB">BB (optimus.backtesting.selection.Indicators attribute)</a>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Action.BUY">BUY (optimus.backtesting.selection.Action attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Action.BUY">BUY (optimus.backtesting.selection.Action attribute)</a>
-</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.buy">buy() (optimus.backtesting.portfolio.Portfolio method)</a>
 </li>
   </ul></td>
@@ -203,11 +200,21 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.data.Universe.check_for_update">check_for_update() (optimus.backtesting.data.Universe method)</a>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.capital">capital() (optimus.backtesting.portfolio.Portfolio property)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Reason.CL">CL (optimus.backtesting.selection.Reason attribute)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.cut_loss">cut_loss() (optimus.backtesting.portfolio.Portfolio property)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.data.Universe.df">df() (optimus.backtesting.data.Universe property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -215,8 +222,6 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Indicators.EMA">EMA (optimus.backtesting.selection.Indicators attribute)</a>
-</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Reason.ENTRY">ENTRY (optimus.backtesting.selection.Reason attribute)</a>
 </li>
   </ul></td>
@@ -247,15 +252,7 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Indicators">Indicators (class in optimus.backtesting.selection)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="K">K</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Indicators.KELTNER">KELTNER (optimus.backtesting.selection.Indicators attribute)</a>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.initial_capital">initial_capital() (optimus.backtesting.portfolio.Portfolio property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -271,8 +268,6 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Indicators.MACD">MACD (optimus.backtesting.selection.Indicators attribute)</a>
-</li>
       <li>
     module
 
@@ -290,10 +285,6 @@
         <li><a href="optimus.backtesting.html#module-optimus.backtesting.selection">optimus.backtesting.selection</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Indicators.MOMENTUM">MOMENTUM (optimus.backtesting.selection.Indicators attribute)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -358,8 +349,6 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Indicators.PIVOT">PIVOT (optimus.backtesting.selection.Indicators attribute)</a>
-</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio">Portfolio (class in optimus.backtesting.portfolio)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.PositionSizing">PositionSizing (class in optimus.backtesting.selection)</a>
@@ -373,10 +362,6 @@
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Reason">Reason (class in optimus.backtesting.selection)</a>
 </li>
   </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Indicators.RSI">RSI (optimus.backtesting.selection.Indicators attribute)</a>
-</li>
-  </ul></td>
 </tr></table>
 
 <h2 id="S">S</h2>
@@ -386,15 +371,11 @@
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.sell">sell() (optimus.backtesting.portfolio.Portfolio method)</a>
 </li>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Indicators.SMA">SMA (optimus.backtesting.selection.Indicators attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Indicators.STOCHASTIC">STOCHASTIC (optimus.backtesting.selection.Indicators attribute)</a>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.size">size() (optimus.backtesting.portfolio.Portfolio property)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.UniverseSelection.STOCKS">STOCKS (optimus.backtesting.selection.UniverseSelection attribute)</a>
-</li>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.data.Universe.sync_with_server">sync_with_server() (optimus.backtesting.data.Universe method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -402,11 +383,7 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.data.Universe.to_df">to_df() (optimus.backtesting.data.Universe method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.transaction">transaction() (in module optimus.backtesting.portfolio)</a>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.transactions">transactions() (optimus.backtesting.portfolio.Portfolio property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -419,14 +396,6 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.UniverseSelection">UniverseSelection (class in optimus.backtesting.selection)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="V">V</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Indicators.VOLUME_MA">VOLUME_MA (optimus.backtesting.selection.Indicators attribute)</a>
 </li>
   </ul></td>
 </tr></table>
