--- a/genindex.html
+++ b/genindex.html
@@ -160,10 +160,12 @@
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
  | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
  | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
@@ -178,9 +180,19 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Action">Action (class in optimus.backtesting.selection)</a>
 </li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.allocation">allocation() (optimus.backtesting.portfolio.Portfolio method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.average_losing_trade">average_losing_trade() (optimus.backtesting.performance.Performance property)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.allocation">allocation() (optimus.backtesting.portfolio.Portfolio method)</a>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.average_number_of_bars_in_losers">average_number_of_bars_in_losers() (optimus.backtesting.performance.Performance property)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.average_number_of_bars_in_winners">average_number_of_bars_in_winners() (optimus.backtesting.performance.Performance property)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.average_trade">average_trade() (optimus.backtesting.performance.Performance property)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.average_winning_trade">average_winning_trade() (optimus.backtesting.performance.Performance property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -241,6 +253,18 @@
   </ul></td>
 </tr></table>
 
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.gross_loss">gross_loss() (optimus.backtesting.performance.Performance property)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.gross_profit">gross_profit() (optimus.backtesting.performance.Performance property)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -260,6 +284,12 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.largest_losing_trade">largest_losing_trade() (optimus.backtesting.performance.Performance property)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.largest_winning_trade">largest_winning_trade() (optimus.backtesting.performance.Performance property)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.list">list() (optimus.backtesting.portfolio.Portfolio method)</a>
 </li>
   </ul></td>
@@ -268,6 +298,12 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.max_daily_drawdown">max_daily_drawdown() (optimus.backtesting.performance.Performance property)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.maximum_intraday_drawdown">maximum_intraday_drawdown() (optimus.backtesting.performance.Performance property)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.maximum_intraday_profit">maximum_intraday_profit() (optimus.backtesting.performance.Performance property)</a>
+</li>
       <li>
     module
 
@@ -285,6 +321,20 @@
         <li><a href="optimus.backtesting.html#module-optimus.backtesting.selection">optimus.backtesting.selection</a>
 </li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.net_profit">net_profit() (optimus.backtesting.performance.Performance property)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.number_losing_trades">number_losing_trades() (optimus.backtesting.performance.Performance property)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.number_winning_trades">number_winning_trades() (optimus.backtesting.performance.Performance property)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -343,6 +393,8 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.percent_profitable">percent_profitable() (optimus.backtesting.performance.Performance property)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance">Performance (class in optimus.backtesting.performance)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.performance_metric">performance_metric() (optimus.backtesting.performance.Performance method)</a>
@@ -353,11 +405,19 @@
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.PositionSizing">PositionSizing (class in optimus.backtesting.selection)</a>
 </li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.profit_factor">profit_factor() (optimus.backtesting.performance.Performance property)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.prom">prom() (optimus.backtesting.performance.Performance property)</a>
+</li>
   </ul></td>
 </tr></table>
 
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.ratio_average_win_over_average_loss">ratio_average_win_over_average_loss() (optimus.backtesting.performance.Performance property)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Reason">Reason (class in optimus.backtesting.selection)</a>
 </li>
@@ -375,6 +435,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.size">size() (optimus.backtesting.portfolio.Portfolio property)</a>
 </li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.sqn">sqn() (optimus.backtesting.performance.Performance property)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.UniverseSelection.STOCKS">STOCKS (optimus.backtesting.selection.UniverseSelection attribute)</a>
 </li>
   </ul></td>
@@ -382,6 +444,10 @@
 
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.total_number_of_trades">total_number_of_trades() (optimus.backtesting.performance.Performance property)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.transactions">transactions() (optimus.backtesting.portfolio.Portfolio property)</a>
 </li>
