--- a/genindex.html
+++ b/genindex.html
@@ -32,6 +32,7 @@
         <script src="_static/jquery.js"></script>
         <script src="_static/underscore.js"></script>
         <script src="_static/doctools.js"></script>
+        <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     
     <script type="text/javascript" src="_static/js/theme.js"></script>
 
@@ -163,6 +164,7 @@
  | <a href="#G"><strong>G</strong></a>
  | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
+ | <a href="#K"><strong>K</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
@@ -172,6 +174,7 @@
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
+ | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  
 </div>
@@ -179,6 +182,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Action">Action (class in optimus.backtesting.selection)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.all">all() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.allocation">allocation() (optimus.backtesting.portfolio.Portfolio method)</a>
 </li>
@@ -200,10 +205,12 @@
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Action.BUY">BUY (optimus.backtesting.selection.Action attribute)</a>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.bollinger_band">bollinger_band() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Action.BUY">BUY (optimus.backtesting.selection.Action attribute)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.buy">buy() (optimus.backtesting.portfolio.Portfolio method)</a>
 </li>
   </ul></td>
@@ -234,6 +241,8 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.ema">ema() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Reason.ENTRY">ENTRY (optimus.backtesting.selection.Reason attribute)</a>
 </li>
   </ul></td>
@@ -276,7 +285,19 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator">Indicator (class in optimus.backtesting.indicator)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.initial_capital">initial_capital() (optimus.backtesting.portfolio.Portfolio property)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="K">K</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.keltner">keltner() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -286,9 +307,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.largest_losing_trade">largest_losing_trade() (optimus.backtesting.performance.Performance property)</a>
 </li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.largest_winning_trade">largest_winning_trade() (optimus.backtesting.performance.Performance property)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.largest_winning_trade">largest_winning_trade() (optimus.backtesting.performance.Performance property)</a>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.length">length() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.list">list() (optimus.backtesting.portfolio.Portfolio method)</a>
 </li>
@@ -298,6 +321,8 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.macd">macd() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.max_daily_drawdown">max_daily_drawdown() (optimus.backtesting.performance.Performance property)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.maximum_intraday_drawdown">maximum_intraday_drawdown() (optimus.backtesting.performance.Performance property)</a>
@@ -314,6 +339,8 @@
 </li>
         <li><a href="optimus.backtesting.html#module-optimus.backtesting.data">optimus.backtesting.data</a>
 </li>
+        <li><a href="optimus.backtesting.html#module-optimus.backtesting.indicator">optimus.backtesting.indicator</a>
+</li>
         <li><a href="optimus.backtesting.html#module-optimus.backtesting.performance">optimus.backtesting.performance</a>
 </li>
         <li><a href="optimus.backtesting.html#module-optimus.backtesting.portfolio">optimus.backtesting.portfolio</a>
@@ -321,6 +348,10 @@
         <li><a href="optimus.backtesting.html#module-optimus.backtesting.selection">optimus.backtesting.selection</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.momentum">momentum() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -367,6 +398,13 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
+    optimus.backtesting.indicator
+
+      <ul>
+        <li><a href="optimus.backtesting.html#module-optimus.backtesting.indicator">module</a>
+</li>
+      </ul></li>
+      <li>
     optimus.backtesting.performance
 
       <ul>
@@ -399,6 +437,8 @@
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.performance_metric">performance_metric() (optimus.backtesting.performance.Performance method)</a>
 </li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.pivot">pivot() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio">Portfolio (class in optimus.backtesting.portfolio)</a>
@@ -408,6 +448,8 @@
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.profit_factor">profit_factor() (optimus.backtesting.performance.Performance property)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.prom">prom() (optimus.backtesting.performance.Performance property)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.prom_less">prom_less() (optimus.backtesting.performance.Performance property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -421,6 +463,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Reason">Reason (class in optimus.backtesting.selection)</a>
 </li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.rsi">rsi() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -431,11 +475,17 @@
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.sell">sell() (optimus.backtesting.portfolio.Portfolio method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.sharpe_ratio">sharpe_ratio() (optimus.backtesting.performance.Performance property)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.size">size() (optimus.backtesting.portfolio.Portfolio property)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.sma">sma() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.sqn">sqn() (optimus.backtesting.performance.Performance property)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.stochastic">stochastic() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.UniverseSelection.STOCKS">STOCKS (optimus.backtesting.selection.UniverseSelection attribute)</a>
 </li>
@@ -462,6 +512,14 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.UniverseSelection">UniverseSelection (class in optimus.backtesting.selection)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="V">V</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.vma">vma() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
   </ul></td>
 </tr></table>
