--- a/optimus.backtesting.html
+++ b/optimus.backtesting.html
@@ -389,7 +389,7 @@
 <div class="math notranslate nohighlight">
 \[R-multiples = \dfrac{Exit\ price - Entry\ price}{Entry\ price - Cut\ loss\ price}\]</div>
 <div class="math notranslate nohighlight">
-\[SQN = \dfrac{Mean\ of\ R-multiples}{Standard\ Deviation\ of\ R-multiples}×{square\ root\ of\ Number\ of\ Trades}\]</div>
+\[SQN = \dfrac{Mean\ of\ R-multiples}{Standard\ Deviation\ of\ R-multiples}×{\sqrt{Number\ of\ Trades}}\]</div>
 <ul class="simple">
 <li><p>Number of Trades we take min (number of trades, 100 ) because too many trades will overestimate the quality of the system</p></li>
 </ul>
