--- a/genindex.html
+++ b/genindex.html
@@ -236,6 +236,12 @@
       <li><a href="optimus.backtesting.html#optimus.backtesting.data.Universe.df">df() (optimus.backtesting.data.Universe property)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.data.Universe.df_multi_period">df_multi_period() (optimus.backtesting.data.Universe method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.data.Universe.df_period_shifting">df_period_shifting() (optimus.backtesting.data.Universe method)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="E">E</h2>
@@ -374,6 +380,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.objective_function">objective_function() (optimus.backtesting.performance.Performance method)</a>
 </li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.objective_to_csv">objective_to_csv() (optimus.backtesting.performance.Performance method)</a>
+</li>
       <li>
     optimus
 
@@ -436,6 +444,8 @@
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance">Performance (class in optimus.backtesting.performance)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.performance_metric">performance_metric() (optimus.backtesting.performance.Performance method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.performance_to_csv">performance_to_csv() (optimus.backtesting.performance.Performance method)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.pivot">pivot() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
@@ -500,6 +510,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.transactions">transactions() (optimus.backtesting.portfolio.Portfolio property)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.transactions_to_csv">transactions_to_csv() (optimus.backtesting.portfolio.Portfolio method)</a>
 </li>
   </ul></td>
 </tr></table>
