--- a/genindex.html
+++ b/genindex.html
@@ -186,10 +186,12 @@
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.allocation">allocation() (optimus.backtesting.portfolio.Portfolio method)</a>
 </li>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.average_losing_trade">average_losing_trade() (optimus.backtesting.performance.Performance property)</a>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.atr">atr() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.average_losing_trade">average_losing_trade() (optimus.backtesting.performance.Performance property)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.average_number_of_bars_in_losers">average_number_of_bars_in_losers() (optimus.backtesting.performance.Performance property)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.average_number_of_bars_in_winners">average_number_of_bars_in_winners() (optimus.backtesting.performance.Performance property)</a>
