--- a/genindex.html
+++ b/genindex.html
@@ -229,12 +229,32 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.candle_bearish_abandoned_baby">candle_bearish_abandoned_baby() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.candle_bearish_engulfing">candle_bearish_engulfing() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.candle_bearish_harami">candle_bearish_harami() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.candle_bullish_abandoned_baby">candle_bullish_abandoned_baby() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.candle_bullish_engulfing">candle_bullish_engulfing() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.candle_bullish_harami">candle_bullish_harami() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.candle_evening_star">candle_evening_star() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.candle_hammer">candle_hammer() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.candle_hanging_man">candle_hanging_man() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.candle_morning_star">candle_morning_star() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.capital">capital() (optimus.backtesting.portfolio.Portfolio property)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Reason.CL">CL (optimus.backtesting.selection.Reason attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.commission">commission() (optimus.backtesting.portfolio.Portfolio property)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.cut_loss">cut_loss() (optimus.backtesting.portfolio.Portfolio property)</a>
@@ -287,10 +307,12 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.gross_loss">gross_loss() (optimus.backtesting.performance.Performance property)</a>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.generate_all_files">generate_all_files() (optimus.backtesting.performance.Performance method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.gross_loss">gross_loss() (optimus.backtesting.performance.Performance property)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.gross_profit">gross_profit() (optimus.backtesting.performance.Performance property)</a>
 </li>
   </ul></td>
@@ -298,6 +320,10 @@
 
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.hma">hma() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.holding">holding() (optimus.backtesting.portfolio.Portfolio method)</a>
 </li>
@@ -467,8 +493,14 @@
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.pivot">pivot() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.data.Universe.plot_heatmap">plot_heatmap() (optimus.backtesting.data.Universe method)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.plot_objective_function">plot_objective_function() (optimus.backtesting.performance.Performance method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.plot_performance_metric">plot_performance_metric() (optimus.backtesting.performance.Performance method)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio">Portfolio (class in optimus.backtesting.portfolio)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.PositionSizing">PositionSizing (class in optimus.backtesting.selection)</a>
@@ -535,13 +567,15 @@
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.total_number_of_trades">total_number_of_trades() (optimus.backtesting.performance.Performance property)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Reason.TP">TP (optimus.backtesting.selection.Reason attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.transactions">transactions() (optimus.backtesting.portfolio.Portfolio property)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.transactions_to_csv">transactions_to_csv() (optimus.backtesting.performance.Performance method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.trend">trend() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -570,6 +604,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.UniverseSelection.WARRANTS">WARRANTS (optimus.backtesting.selection.UniverseSelection attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.wma">wma() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
   </ul></td>
 </tr></table>
