--- a/genindex.html
+++ b/genindex.html
@@ -483,6 +483,8 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.parabolic_sar">parabolic_sar() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.percent_profitable">percent_profitable() (optimus.backtesting.performance.Performance property)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance">Performance (class in optimus.backtesting.performance)</a>
