--- a/genindex.html
+++ b/genindex.html
@@ -332,12 +332,18 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.gainer_loser">gainer_loser() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.generate_all_files">generate_all_files() (optimus.backtesting.performance.Performance method)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.get_equity">get_equity() (optimus.backtesting.portfolio.Portfolio method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.tick_data.TickData.get_TA">get_TA() (optimus.backtesting.tick_data.TickData method)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.tick_data.TickData.get_timeframe">get_timeframe() (optimus.backtesting.tick_data.TickData method)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.gross_loss">gross_loss() (optimus.backtesting.performance.Performance property)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.performance.Performance.gross_profit">gross_profit() (optimus.backtesting.performance.Performance property)</a>
@@ -366,6 +372,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.UniverseSelection.INDICES">INDICES (optimus.backtesting.selection.UniverseSelection attribute)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.initial_capital">initial_capital() (optimus.backtesting.portfolio.Portfolio property)</a>
 </li>
   </ul></td>
@@ -424,6 +432,8 @@
 </li>
         <li><a href="optimus.backtesting.html#module-optimus.backtesting.selection">optimus.backtesting.selection</a>
 </li>
+        <li><a href="optimus.backtesting.html#module-optimus.backtesting.tick_data">optimus.backtesting.tick_data</a>
+</li>
         <li><a href="optimus.backtesting.html#module-optimus.backtesting.walk_forward">optimus.backtesting.walk_forward</a>
 </li>
       </ul></li>
@@ -478,8 +488,6 @@
         <li><a href="optimus.backtesting.html#module-optimus.backtesting.data">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     optimus.backtesting.indicator
 
@@ -487,6 +495,8 @@
         <li><a href="optimus.backtesting.html#module-optimus.backtesting.indicator">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     optimus.backtesting.performance
 
@@ -506,6 +516,13 @@
 
       <ul>
         <li><a href="optimus.backtesting.html#module-optimus.backtesting.selection">module</a>
+</li>
+      </ul></li>
+      <li>
+    optimus.backtesting.tick_data
+
+      <ul>
+        <li><a href="optimus.backtesting.html#module-optimus.backtesting.tick_data">module</a>
 </li>
       </ul></li>
       <li>
@@ -569,9 +586,11 @@
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.Reason">Reason (class in optimus.backtesting.selection)</a>
 </li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.EquityModel.REDUCED_TOTAL_EQUITY">REDUCED_TOTAL_EQUITY (optimus.backtesting.selection.EquityModel attribute)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="optimus.backtesting.html#optimus.backtesting.selection.EquityModel.REDUCED_TOTAL_EQUITY">REDUCED_TOTAL_EQUITY (optimus.backtesting.selection.EquityModel attribute)</a>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.tick_data.TickData.resample">resample() (optimus.backtesting.tick_data.TickData method)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.roc">roc() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
@@ -597,6 +616,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.sma_ema">sma_ema() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.smart_money">smart_money() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.smma">smma() (optimus.backtesting.indicator.Indicator method)</a>
@@ -616,6 +637,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.portfolio.Portfolio.take_profit">take_profit() (optimus.backtesting.portfolio.Portfolio property)</a>
+</li>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.tick_data.TickData">TickData (class in optimus.backtesting.tick_data)</a>
 </li>
       <li><a href="optimus.backtesting.html#optimus.backtesting.selection.EquityModel.TOTAL_EQUITY">TOTAL_EQUITY (optimus.backtesting.selection.EquityModel attribute)</a>
 </li>
@@ -650,6 +673,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.vma">vma() (optimus.backtesting.indicator.Indicator method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimus.backtesting.html#optimus.backtesting.indicator.Indicator.volume_average">volume_average() (optimus.backtesting.indicator.Indicator method)</a>
 </li>
   </ul></td>
 </tr></table>
